Bug 486909 - KDiff3 as git mergetool does not jump to first conflict position at startup
Summary: KDiff3 as git mergetool does not jump to first conflict position at startup
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.11.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-11 22:37 UTC by Dominik Kummer
Modified: 2024-05-19 00:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.11.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik Kummer 2024-05-11 22:37:31 UTC
I use KDiff3 as mergetool for git and I just realized that it does not jump
to the first conflict position, but to some random position at startup.

So it ruins the workflow completely because I always fear to miss
prior conflicts within a solving flow.
Comment 1 michael 2024-05-18 19:24:57 UTC
This will be fixed in the next release thanks.
Comment 2 michael 2024-05-18 23:27:03 UTC
Git commit 475d52c74424cabe881602713a1f4946a1987132 by Michael Reeves.
Committed on 18/05/2024 at 22:51.
Pushed by mreeves into tag '1.11.1'.

Fix bad value limiter

Use std::max not std::min to limit line value range
FIXED-IN:1.11.1

M  +1    -1    src/Overview.cpp
M  +2    -2    src/difftextwindow.cpp

https://invent.kde.org/sdk/kdiff3/-/commit/475d52c74424cabe881602713a1f4946a1987132
Comment 3 michael 2024-05-19 00:21:42 UTC
Git commit 17021d7e2479e92b23d450b48843237c0d92e785 by Michael Reeves.
Committed on 18/05/2024 at 19:27.
Pushed by mreeves into branch 'master'.

Fix bad value limiter

Use std::max not std::min to limit line value range
FIXED-IN:1.11.1

M  +1    -1    src/Overview.cpp
M  +2    -2    src/difftextwindow.cpp

https://invent.kde.org/sdk/kdiff3/-/commit/17021d7e2479e92b23d450b48843237c0d92e785