Fix bad value limiter

Use std::max not std::min to limit line value range

BUG:486909
FIXED-IN:1.11.1